fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,8 @@ h2 {
 }
 
 .solo .title {
+    position: absolute;
+    top: 10vh;
     font-size: 25px;
     font-weight: 300;
     font-family: 'Courier', 'Courier New', 'Garamond', 'Times New Roman';
@@ -292,7 +294,7 @@ h2 {
     display: block;
     left: 0px;
     right: 0px;
-    min-height: 110vh;
+    height: 110vh;
     background: #E24E42;
 }
 a {
@@ -481,7 +483,6 @@ a {
 /* TEAM PROJECTS */
 .featured {
     display: block;
-    top: -400px;
     left: 0px;
     right: 0px;
     background: #008F95;
